add header page

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,83 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../dist/output.css">
 </head>
 <body>
-    <h2></h2>
+    <div class="max-w-[1440px] mx-auto ">
+        <header class="pt-9 relative">
+            <div class="bg-[#BDCCFF] w-[35%] h-full absolute right-0 top-0 z-0"></div>
+            <div class="layout-container relative z-10">
+                <div class="flex justify-between items-center mb-[115px]" >
+                    <a href="#" class="text-2xl font-semibold">SmartSpace</a>
+                    <ul class="flex items-center gap-11">
+                        <li class="text-sm font-bold font-DM-san"><a href="#">Home</a></li>
+                        <li class="text-sm font-bold font-DM-san"><a href="#">About</a></li>
+                        <li class="text-sm font-bold font-DM-san"><a href="#">Service</a></li>
+                        <li class="text-sm font-bold font-DM-san"><a href="#">Portfolio</a></li>
+                        <li class="text-sm font-bold font-DM-san"><a href="#">Blog</a></li>
+                        <li class="text-sm font-bold font-DM-san"><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="relative mb-[200px]">
+                    <div class=" relative z-10">
+                        <h3 class="font-DM-san font-bold text-2xl uppercase text-orangef9 mb-6">RESIDENTIAL & OFFICE SPACES</h3>
+                        <h2 class="text-[54px] font-semibold max-w-[500px] mb-6 leading-[65px]">Smart Living Style for Smart People</h2>
+                        <p class="text-[17px] text-gray font-normal max-w-[500px] mb-[48px]">Much did had call new drew that kept. Limits expect wonder law she. Now has you views woman noisy match money rooms.</p>
+                        <form action="" class="flex max-w-[737px] border border-slate-300">
+                            <div class="flex gap-5 px-8 bg-white items-center flex-1" >
+                                <img src="./img/Icon.jpg" alt="" class="w-5 h-5">
+                                <input type="text" class="border-none flex-1 text-[17px] placeholder:text-slate-300 placeholder:font-DM-san placeholder:text-lg " placeholder="Enter Zipcode to search properties">
+                            </div>
+                            <button class="text-[17px] text-white font-bold px-10 py-7 bg-orangef8 leading-none">Search Now</button>
+                        </form>
+                    </div>
+                    <div class="absolute top-0 right-0 z-0 ">
+                        <img src="./img/Header Image.png" alt="" class="max-h-[550px] ">
+                    </div>
+                </div>
+                <div class="">
+                    <span class="text-gray mb-[27px]"></span>
+                    <div class="flex gap-[50px] h-[23px]" >
+                        <img src="./img/img_1.png" alt="">
+                        <img src="./img/img_2.png" alt="">
+                        <img src="./img/img_3.png" alt="">
+                        <img src="./img/img_4.png" alt="">
+                        <img src="./img/img_5.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main class="mt-[223px]">
+            <section >
+                <div class="layout-container text-center">
+                    <h2 class="font-semibold text-[4rem] leading-[10.5rem] mb-[70px]">How it works?</h2>
+                    <div class="flex justify-between ">
+                        <div class="text-center max-w-[260px]  ">
+                            <div class="w-[90px] h-[90px] rounded-[20px] bg-[#9672FF] flex justify-center items-center mx-auto mb-[50px]">
+                                <img src="./img/icon_1.png" alt="">
+                            </div>
+                            <span class="text-[22px] font-semibold mb-[15px] inline-block">Research Suburbs</span>
+                            <p class="font-DM-san text-base font-normal">Wonder twenty hunted and put income set desire expect. Am cottage calling.</p>
+                        </div>
+                        <div class="text-center max-w-[260px]  ">
+                            <div class="w-[90px] h-[90px] rounded-[20px] bg-[#4DDFFD] flex justify-center items-center mx-auto mb-[50px]">
+                                <img src="./img/icon_2.png" alt="">
+                            </div>
+                            <span class="text-[22px] font-semibold mb-[15px] inline-block">Instant Valuation</span>
+                            <p class="font-DM-san text-base font-normal">Conveying or northward offending admitting perfectly my. Colonel gravit and moonlight.</p>
+                        </div>
+                        <div class="text-center max-w-[260px]  ">
+                            <div class="w-[90px] h-[90px] rounded-[20px] bg-[#F2B8EC] flex justify-center items-center mx-auto mb-[50px]">
+                                <img src="./img/icon_3.png" alt="">
+                            </div>
+                            <span class="text-[22px] font-semibold mb-[15px] inline-block">Track Property</span>
+                            <p class="font-DM-san text-base font-normal">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
