add section how-it-work

--- a/src/index.html
+++ b/src/index.html
@@ -56,14 +56,16 @@
                 <div class="layout-container text-center">
                     <h2 class="font-semibold text-[4rem] leading-[10.5rem] mb-[70px]">How it works?</h2>
                     <div class="flex justify-between ">
-                        <div class="text-center max-w-[260px]  ">
+                        <div class="text-center max-w-[260px]  relative">
+                            <div class="absolute -right-[75%] top-[45px]"><img src="./img/Group 19.png" alt=""></div>
                             <div class="w-[90px] h-[90px] rounded-[20px] bg-[#9672FF] flex justify-center items-center mx-auto mb-[50px]">
                                 <img src="./img/icon_1.png" alt="">
                             </div>
                             <span class="text-[22px] font-semibold mb-[15px] inline-block">Research Suburbs</span>
                             <p class="font-DM-san text-base font-normal">Wonder twenty hunted and put income set desire expect. Am cottage calling.</p>
                         </div>
-                        <div class="text-center max-w-[260px]  ">
+                        <div class="text-center max-w-[260px]  relative">
+                            <div class="absolute -right-[75%] top-[45px]"><img src="./img/Group 20.png" alt=""></div>
                             <div class="w-[90px] h-[90px] rounded-[20px] bg-[#4DDFFD] flex justify-center items-center mx-auto mb-[50px]">
                                 <img src="./img/icon_2.png" alt="">
                             </div>
