--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             </div>
         </header>
         <main class="mt-[223px]">
-            <section >
+            <section class="mb-[102px]">
                 <div class="layout-container text-center">
                     <h2 class="font-semibold text-[4rem] leading-[10.5rem] mb-[70px]">How it works?</h2>
                     <div class="flex justify-between ">
@@ -78,6 +78,84 @@
                             </div>
                             <span class="text-[22px] font-semibold mb-[15px] inline-block">Track Property</span>
                             <p class="font-DM-san text-base font-normal">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="py-[123px] mb-[120px]">
+                <div class="layout-container ">
+                    <div class="flex justify-between items-start mb-[50px]">
+                        <div class=""> <h2 class="font-semibold text-[40px] mb-[15px] leading-10">Best Real Estate Deals</h2>
+                            <p class="font-medium text-base leading-6 max-w-[470px]">Colonel gravity get thought fat smiling add but. Wonder twenty hunted and put income set desire expect.</p>
+                        </div>
+                        <a href="#" class="py-5 px-8 rounded-md bg-orangef8 text-white font-medium">View All Property</a>
+                    </div>
+                    <div class="">
+                        <div class="flex gap-[50px] items-center mb-[45px]">
+                            <span class="font-semibold text-[18px] text-orangef8 relative after:absolute after:h-[2px] after:w-[100%] after:bg-orangef8 after:-bottom-1 after:left-0  " >Residential Property</span>
+                            <span class="font-semibold text-[18px] ">Commercial Property</span>
+                            <span class="font-semibold text-[18px]">Agriculture Property</span>
+                            <span class="font-semibold text-[18px]">Industrial Property</span>
+                        </div>
+                        <div class="flex gap-[30px]">
+                            <div class=" relative">
+                                <img src="./img/Image 03.jpg" alt="">
+                                <div class="card absolute top-2 left-2">Featured</div>
+                                <div class="card absolute top-2 left-[104px]">3D</div>
+                            </div>
+                            <div class=" relative">
+                                <img src="./img/Image 02.jpg" alt="">
+                                <div class="card absolute top-2 left-2">Featured</div>
+                                <div class="card absolute top-2 left-[104px]">3D</div>
+                            </div>
+                            <div class=" relative">
+                                <img src="./img/Image 01.jpg" alt="">
+                                <div class="card absolute top-1 left-2">Featured</div>
+                                <div class="card absolute top-1 left-[104px]">3D</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="text-center">
+                <div class="layout-container ">
+                    <h2 class="font-semibold text-[40px] mb-[95px]">Featured Listing of the Week</h2>
+                    <div class="bg-[#F1FFFF] w-full p-10 flex justify-between gap-[77px]">
+                        <div class="relative">
+                            <img src="./img/Mask Group.png" alt="">
+                            <img src="./img/Image.png" alt="" class="absolute bottom-0 left-[50%] -translate-x-[50%]">
+                        </div>
+                        <div class="flex-1 py-10 pr-[100px] text-start ">
+                            <h3 class="text-[31px] font-semibold leading-10 mb-8">The and collecting for the motionless difficulty son.</h3>
+                            <p class="text-base text-gray2 leading-6 mb-10">Conveying or northward offending admitting perfectly my. Colonel gravity get thought fat smiling add but difficult situations.</p>
+                            <div class="flex flex-row flex-wrap gap-y-[37px] mb-[54px]">
+                                <div class="w-[calc(100%/3)] flex flex-col gap-3 ">
+                                    <span class="text-[17px] font-bold">Budget</span>
+                                    <span class="text-[17px] font-normal text-gray2">Confidential</span>
+                                </div>
+                                <div class="w-[calc(100%/3)] flex flex-col gap-3 text-start">
+                                    <span class="text-[17px] font-bold">Size</span>
+                                    <span class="text-[17px] font-normal text-gray2">1200 m2</span>
+                                </div>
+                                <div class="w-[calc(100%/3)] flex flex-col gap-3 text-start">
+                                    <span class="text-[17px] font-bold">Type</span>
+                                    <span class="text-[17px] font-normal text-gray2">Office</span>
+                                </div>
+                                <div class="w-[calc(100%/3)] flex flex-col gap-3 text-start">
+                                    <span class="text-[17px] font-bold">Status</span>
+                                    <span class="text-[17px] font-normal text-gray2">Done</span>
+                                </div>
+                                <div class="w-[calc(100%/3)] flex flex-col gap-3 text-start">
+                                    <span class="text-[17px] font-bold">Location</span>
+                                    <span class="text-[17px] font-normal text-gray2">Switzerland</span>
+                                </div>
+                                <div class="w-[calc(100%/3)] flex flex-col gap-3 text-start">
+                                    <span class="text-[17px] font-bold">Flat</span>
+                                    <span class="text-[17px] font-normal text-gray2">8 Room</span>
+                                </div>
+                                
+                            </div>
+                            <a href="#" class=" inline-block w-full py-4 px-[36px] bg-orangef8 text-white uppercase text-base font-medium rounded-[5px]">YES! I WANT BOOK “OFFICE PACKAGE”</a>
                         </div>
                     </div>
                 </div>
