--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </section>
-            <section class="text-center">
+            <section class="text-center mb-[196px]">
                 <div class="layout-container ">
                     <h2 class="font-semibold text-[40px] mb-[95px]">Featured Listing of the Week</h2>
                     <div class="bg-[#F1FFFF] w-full p-10 flex justify-between gap-[77px]">
@@ -157,6 +157,56 @@
                             </div>
                             <a href="#" class=" inline-block w-full py-4 px-[36px] bg-orangef8 text-white uppercase text-base font-medium rounded-[5px]">YES! I WANT BOOK “OFFICE PACKAGE”</a>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="mb-[210px]">
+                <div class="layout-container">
+                    <h2 class="max-w-[570px] font-semibold text-[40px] leading-[45px] pb-[50px]">Loved by businesses, and individuals across the </h2>
+                    <div class="grid grid-cols-3 gap-[30px] mb-[85px]">
+                        <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px]">
+                            <img src="./img/Review.png" alt="" class="mb-8 h-[16px] ">
+                            <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
+                            <div class="flex gap-5">
+                                <img src="./img/pb_1.png" alt="" class="rounded-full w-12 h-12" >
+                                <div class="flex flex-col gap-1">
+                                    <span class="font-bold text-gray3">Jane Cooper</span>
+                                    <span class="font-normal text-gray1 text-sm">Los Angeles, CA</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px]">
+                            <img src="./img/Review.png" alt="" class="mb-8 h-[16px] ">
+                            <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
+                            <div class="flex gap-5">
+                                <img src="./img/pb_2.png" alt="" class="rounded-full w-12 h-12" >
+                                <div class="flex flex-col gap-1">
+                                    <span class="font-bold text-gray3">Robert Fox</span>
+                                    <span class="font-normal text-gray1 text-sm">New York City, NY</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px]">
+                            <img src="./img/Review.png" alt="" class="mb-8 h-[16px] ">
+                            <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
+                            <div class="flex gap-5">
+                                <img src="./img/pb_3.png" alt="" class="rounded-full w-12 h-12" >
+                                <div class="flex flex-col gap-1">
+                                    <span class="font-bold text-gray3">Leslie Alexander</span>
+                                    <span class="font-normal text-gray1 text-sm">Buffalo, NJ</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex justify-between items-center">
+                        <div class="flex gap-[80px] h-[20px] items-center">
+                            <img src="./img/img_1.png" alt="" class="max-h-full">
+                            <img src="./img/img_2.png" alt="" class="max-h-full">
+                            <img src="./img/img_3.png" alt="" class="max-h-full">
+                            <img src="./img/img_4.png" alt="" class="max-h-full">
+                            <img src="./img/img_5.png" alt="" class="max-h-full">
+                        </div>
+                        <div class="max-w-[311px] font-normal text-base leading-6 text-gray3">Give us a Call 1-888-111-2222 and we can set you up, or <a href="#" class="text-[#2CBDE7]">check our pricing plans</a></div>
                     </div>
                 </div>
             </section>
