--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,39 @@
                     </div>
                 </div>
             </section>
+            <section class="py-[160px]">
+                <div class="layout-container text-center">
+                    <h2 class="text-gray text-[45px] font-bold mb-2 leading-[50px]">Get Our Newsletter</h2>
+                    <span class="text-gray text-[23px] font-semibold leading-6 mb-10 inline-block">To join the worldwide community</span>
+                    <div class="shadow-2xl">
+                        <form action="" class=" flex flex-row justify-between p-[30px] items-start text-start  pl-12">
+                            <div class="flex flex-col gap-2 ">
+                            <input type="text" placeholder="Type your Email Address" class="placeholder:text-slate-400 placeholder::text-lg">
+                            <span for="" class="text-gray text-xl font-bold leading-6">danghieu42481@gmail.com</span>
+                            </div>
+                            <button class="px-10 py-6 bg-orangef8 text-white text-lg font-DM-san ">Send Now</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <div class="layout-container text-center">
+                    <div class="border-t  w-[75%] border-[#DEDFE1] py-[60px] mx-auto">
+                        <div class="flex justify-between items-center" >
+                            <a href="#" class="text-2xl font-semibold">SmartSpace</a>
+                            <ul class="flex items-center gap-11">
+                                <li class="text-sm font-bold font-DM-san"><a href="#">Home</a></li>
+                                <li class="text-sm font-bold font-DM-san"><a href="#">About</a></li>
+                                <li class="text-sm font-bold font-DM-san"><a href="#">Service</a></li>
+                                <li class="text-sm font-bold font-DM-san"><a href="#">Portfolio</a></li>
+                                <li class="text-sm font-bold font-DM-san"><a href="#">Blog</a></li>
+                                <li class="text-sm font-bold font-DM-san"><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="text-gray font-DM-san text-xs font-bold mb-[36px]">Copyright © 2021 AR Shakir . All Rights Reseved.</div>
+                </div>
+            </footer>
         </main>
     </div>
 </body>
