done use carosel

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="../hi/owl.carousel.min.css">
+    <link rel="stylesheet" href="../hi/owl.theme.default.min.css">
     <link rel="stylesheet" href="../dist/output.css">
 </head>
 <body>
@@ -184,7 +186,40 @@
             <section class=" mb-[80px] lg:mb-[210px] ">
                 <div class="layout-container">
                     <h2 class="max-w-[570px] font-semibold text-4xl pb-[50px]">Loved by businesses, and individuals across the </h2>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 max-w-full lg:grid-cols-3 gap-[30px] mb-[85px] overscroll-auto">
+                    <div class="owl-carousel owl-theme mb-[85px] max-w-full">
+                        <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px] shadow-xl">
+                            <img src="./img/Review.png"  alt="" class="mb-8 h-[16px] w-auto ">
+                            <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
+                            <div class="flex gap-5">
+                                <img src="./img/pb_1.png" alt="" class="rounded-full w-12 h-12" >
+                                <div class="flex flex-col gap-1">
+                                    <span class="font-bold text-gray3">Jane Cooper</span>
+                                    <span class="font-normal text-gray1 text-sm">Los Angeles, CA</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px] shadow-xl">
+                            <img src="./img/Review.png" alt="" class="mb-8 h-[16px] ">
+                            <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
+                            <div class="flex gap-5">
+                                <img src="./img/pb_2.png" alt="" class="rounded-full w-12 h-12" >
+                                <div class="flex flex-col gap-1">
+                                    <span class="font-bold text-gray3">Robert Fox</span>
+                                    <span class="font-normal text-gray1 text-sm">New York City, NY</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px] shadow-xl">
+                            <img src="./img/Review.png" alt="" class="mb-8 h-[16px] ">
+                            <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
+                            <div class="flex gap-5">
+                                <img src="./img/pb_3.png" alt="" class="rounded-full w-12 h-12" >
+                                <div class="flex flex-col gap-1">
+                                    <span class="font-bold text-gray3">Leslie Alexander</span>
+                                    <span class="font-normal text-gray1 text-sm">Buffalo, NJ</span>
+                                </div>
+                            </div>
+                        </div>
                         <div class="flex items-start flex-col py-[50px] px-10 border border-[#EBEBEB] rounded-[10px] shadow-xl">
                             <img src="./img/Review.png" alt="" class="mb-8 h-[16px] ">
                             <p class="text-base leading-7 font-normal text-gray1 mb-[50px]">Moderate children at of outweigh it. Unsatiable it considered invitation he travelling insensible. Consulted admitting oh mr up as described.</p>
@@ -219,6 +254,9 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="grid grid-cols-1 sm:grid-cols-2 max-w-full lg:grid-cols-3 gap-[30px] mb-[85px] overscroll-auto">
+
+                    </div> -->
                     <div class="flex md:justify-between items-center flex-col lg:flex-row gap-5 lg:gap-0">
                         <div class="flex gap-[30px] h-[20px] items-center xl:gap-[80px] flex-wrap">
                             <img src="./img/img_1.png" alt="" class="max-h-full hover:scale-110 hover-transti">
@@ -267,5 +305,8 @@
         </main>
     </div>
 </body>
+
+<script src="../hi/jquery.min.js"></script>
+<script src="../hi/owl.carousel.min.js"></script>
 <script src="./js/main.js"></script>
 </html>
