--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                         <h2 class=" font-semibold text-4xl sm:text-[44px] leading-[38px] max-w-full sm:max-w-[90%] md:max-w-[400px] mb-6 sm:leading-[55px] lg:leading-[65px] lg:max-w-[500px] lg:text-[54px]">Smart Living Style for Smart People</h2>
                         <p class="text-[17px] text-gray font-normal max-w-full sm:max-w-[90%] md:max-w-[400px] mb-[48px] lg:max-w-[500px]">Much did had call new drew that kept. Limits expect wonder law she. Now has you views woman noisy match money rooms.</p>
                         <form action="" class="flex flex-col max-w-[618px]  border border-slate-300 lg:max-w-[737px] sm:flex-row">
-                            <div class="flex gap-3 sm:gap-5 px-8 bg-white items-center flex-1 shadow-xl" >
+                            <div class="flex gap-3 sm:gap-5 px-8 bg-white items-center flex-1 shadow-xl focus-within:ring-2 focus-within:ring-[#BDCCFF]">
                                 <img src="./img/Icon.jpg" alt="" class="w-5 h-5">
                                 <input type="text" class="border-none flex-1 text-[17px] py-4 sm:py-0 placeholder:text-slate-300 placeholder:font-DM-san placeholder:text-lg " placeholder="Enter Zipcode to search properties">
                             </div>
@@ -251,7 +251,7 @@
                     </div>
                 </div>
             </section>
-            <section class=" mb-[80px] lg:mb-[210px] ">
+            <section class=" mb-[80px] lg:mb-[150px] ">
                 <div class="layout-container">
                     <h2 class="max-w-[570px] font-semibold text-4xl pb-[50px]">Loved by businesses, and individuals across the </h2>
                     <div class="owl-carousel owl-theme mb-[85px] max-w-full">
@@ -344,7 +344,7 @@
                     <div class="shadow-2xl">
                         <form action="" class=" flex flex-col sm:flex-row justify-between p-[30px] items-start text-start  pl-12">
                             <div class="flex flex-col gap-2 ">
-                            <input type="text" placeholder="Type your Email Address" class="placeholder:text-slate-400 placeholder::text-lg">
+                            <input type="email" placeholder="Type your Email Address" class="placeholder:text-slate-400 placeholder::text-lg invalid:text-red-500 text-blue-400 focus:ring-2 focus:ring-blue-500 rounded-sm px-4 py-2 focus:invalid:ring-red-500">
                             <span for="" class="text-gray text-xl font-bold leading-6 mb-4 sm:mb-0">danghieu42481@gmail.com</span>
                             </div>
                             <button class="w-full sm:w-auto py-4 px-10 sm:py-6 bg-orangef8 text-white text-lg font-DM-san hover:bg-opacity-90 hover-transti ">Send Now</button>
